========================
0.0.65
========================

- fixed TextDB output when `TextDB.paginate()` without sorting
- fixed `default_root` option for inline merging files directly in the views

========================
0.0.64
========================

- fixed `session.onlocale()`
- fixed prefixes in `QueryBuilder.language()` method
- added auto-measuring width/height for `.webp`, `.bmp` and `.psd` images
- added a small buffer check for uploading file data for most used file extensions
- improved logger in `FILESTORAGE()`
- fixed functionality of `res.nocache()` method in the `res.stream()` method
- fixed `continuing` with QueryBuilder processing
- added `DB().language(prefix, skip)` method that sets a default prefix/skip values
- added better error handling for `MAPSCHEMA()`
- improved error outputing
- fixed `RESTBuilder.promise([$])`
- extended TypeScript
- added a support for loading files for the specific environment e.g. `file-debug.js` or `file-release.js`

========================
0.0.63
========================

- updated `F.runscript()` by adding `require` argument
- improved internal proxy functionality
- added `U.getExtensionFromContentType(value)`
- fixed `flow.unregister()` method
- added `MAKE(schema, model, [callback/$/controller], [novalidate], [controller])` method for validating data according to the schema
- added `$.on()` and `$.emit()` methods into the `SchemaOptions`
	- `$.on('end', function(err, response, [op_name]))` catches end of data processing
	- `$.on('data', function(response, [op_name]))` catches a response from a Schema operation
	- `$.on('error', function(err, [op_name]))` catches error
	- `$.on('response', function(response, [op_name]))`
- added `STATUS(id/$, data, [timeout])` for capturing of universal status (executes `DEF.onStatus(meta)`)
- added `DEF.onStatus(meta)` for capturing of universal status
	- `meta.date {Date}` last modified date
	- `meta.data {Object}`
	- `meta.id {String}`